Fix scrolling on overflow

--- a/customize/platform/ext/hac/web/webroot/static/css/style.css
+++ b/customize/platform/ext/hac/web/webroot/static/css/style.css
@@ -1113,4 +1113,6 @@ textarea {
 	box-sizing: border-box;
 	margin-right: 0;
 }
-
+#contentForm fieldset {
+	min-width: 0;
+}
